# claude-code-in-one-shot

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: code-reviewer.md
projects/portfolio/: .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  tasks.md
projects/portfolio/decisions/: 0001-static-stack-astro.md  0002-github-build-time-fetch.md  0003-nginx-docker-compose-ngrok.md  0004-theme-dark-light-toggle.md  0005-phase2-backend-go-chi-postgres.md  README.md
projects/portfolio/nginx/: default.conf
projects/portfolio/scripts/: fetch-github.mjs
projects/portfolio/src/components/: About.astro  (+5 more)
projects/url-shortener/: .env.example  .gitignore  README.md  docker-compose.yml  skills-lock.json  tasks.md
projects/url-shortener/backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
projects/url-shortener/backend/alembic/: env.py
projects/url-shortener/backend/alembic/versions/: 0001_create_links.py  0002_add_disabled_column.py
projects/url-shortener/backend/app/: config.py  db.py  logging_conf.py  main.py  models.py  rate_limit.py  schemas.py
projects/url-shortener/backend/app/routers/: health.py  links.py  redirect.py
projects/url-shortener/backend/app/services/: safe_browsing.py  slug.py  url_validator.py
projects/url-shortener/backend/app/temporal/: activities.py  client.py  schedules.py  worker.py  workflows.py
projects/url-shortener/backend/tests/: conftest.py  test_activities.py  test_health.py  test_lookup.py  test_rate_limit.py  test_redirect.py  test_safe_browsing.py  test_shorten.py  test_slug_collision.py  test_url_validator.py  test_workflow_click_counter.py  test_workflow_recheck.py
projects/url-shortener/decisions/: 0001-stack-fastapi-react-postgres.md  0002-slug-strategy-base62-random.md  0003-guardrails-three-layers.md  0004-routing-slash-s-slug.md  0005-testing-real-postgres.md  0006-temporal-for-durability.md  0007-async-click-counting.md  README.md
projects/url-shortener/frontend/: Dockerfile  package.json  vite.config.ts
(+13 files in other folders)
