[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urlshortener-backend"
version = "0.1.0"
description = "URL shortener API + Temporal worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",          # sync driver for Alembic
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "httpx>=0.28",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
    "temporalio>=1.8",
    "python-json-logger>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "RET", "SIM"]
ignore = [
    "S101",  # assert in tests
    "S104",  # 0.0.0.0 bind in dev
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
# Exclude runtime-only entrypoints that exist only to be invoked by docker
# (no logic worth unit-testing without a live Temporal server).
omit = [
    "app/temporal/worker.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
